--- a/C1G1.html
+++ b/C1G1.html
@@ -13139,11 +13139,10 @@ div#notebook {
 <span class="n">data2</span> <span class="o">=</span> <span class="n">pd</span><span class="o">.</span><span class="n">read_csv</span><span class="p">(</span><span class="s2">&quot;data2.csv&quot;</span><span class="p">)</span>
 <span class="n">heightSim</span> <span class="o">=</span> <span class="n">data2</span><span class="p">[</span><span class="s1">&#39;Height&#39;</span><span class="p">]</span>
 
-<span class="k">def</span> <span class="nf">changeSampleSize</span><span class="p">(</span><span class="n">sample_size</span><span class="o">=</span><span class="mi">18</span><span class="p">):</span>
+<span class="k">def</span> <span class="nf">changeSampleSize</span><span class="p">(</span><span class="n">Sample_Size</span><span class="o">=</span><span class="mi">18</span><span class="p">):</span>
   <span class="n">np</span><span class="o">.</span><span class="n">random</span><span class="o">.</span><span class="n">seed</span><span class="p">(</span><span class="mi">4</span><span class="p">)</span>
   <span class="n">SampledHeight</span><span class="o">=</span><span class="n">random</span><span class="o">.</span><span class="n">choices</span><span class="p">(</span><span class="n">heightSim</span><span class="p">,</span> <span class="n">k</span><span class="o">=</span><span class="n">sample_size</span><span class="p">)</span>
   <span class="n">meanHgt</span><span class="o">=</span><span class="n">np</span><span class="o">.</span><span class="n">mean</span><span class="p">(</span><span class="n">SampledHeight</span><span class="p">)</span>
-  <span class="nb">print</span><span class="p">(</span><span class="s2">&quot;Sample variance:&quot;</span><span class="p">,</span> <span class="n">np</span><span class="o">.</span><span class="n">var</span><span class="p">(</span><span class="n">SampledHeight</span><span class="p">))</span>
 
   <span class="n">sns</span><span class="o">.</span><span class="n">displot</span><span class="p">(</span><span class="n">SampledHeight</span><span class="p">,</span><span class="n">bins</span><span class="o">=</span><span class="mi">10</span><span class="p">,</span> <span class="n">kde</span><span class="o">=</span><span class="kc">False</span><span class="p">,</span> <span class="n">rug</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">height</span><span class="o">=</span><span class="mi">6</span><span class="p">,</span> <span class="n">color</span> <span class="o">=</span> <span class="s2">&quot;mediumpurple&quot;</span><span class="p">);</span>
 
@@ -13152,7 +13151,10 @@ div#notebook {
   <span class="n">plt</span><span class="o">.</span><span class="n">ylabel</span><span class="p">(</span><span class="s1">&#39;Frequency&#39;</span><span class="p">);</span>
   <span class="n">plt</span><span class="o">.</span><span class="n">axvline</span><span class="p">(</span><span class="n">x</span><span class="o">=</span><span class="n">meanHgt</span><span class="p">,</span> <span class="n">color</span><span class="o">=</span><span class="s1">&#39;purple&#39;</span><span class="p">,</span> <span class="n">linestyle</span><span class="o">=</span><span class="s1">&#39;-&#39;</span><span class="p">,</span> <span class="n">linewidth</span> <span class="o">=</span> <span class="mi">3</span><span class="p">,</span> <span class="n">label</span><span class="o">=</span><span class="n">meanHgt</span><span class="p">);</span>
   <span class="n">plt</span><span class="o">.</span><span class="n">legend</span> <span class="p">();</span>
-<span class="n">_</span><span class="o">=</span><span class="n">interact</span><span class="p">(</span><span class="n">changeSampleSize</span><span class="p">,</span><span class="n">sample_size</span><span class="o">=</span><span class="p">(</span><span class="mi">2</span><span class="p">,</span><span class="mi">1000</span><span class="p">))</span>
+
+<span class="n">int_widget</span> <span class="o">=</span> <span class="n">interactive</span><span class="p">(</span><span class="n">changeSampleSize</span><span class="p">,</span><span class="n">sample_size</span><span class="o">=</span><span class="p">(</span><span class="mi">2</span><span class="p">,</span><span class="mi">1000</span><span class="p">))</span>
+<span class="n">int_widget</span><span class="o">.</span><span class="n">children</span><span class="p">[</span><span class="mi">0</span><span class="p">]</span><span class="o">.</span><span class="n">layout</span> <span class="o">=</span> <span class="n">Layout</span><span class="p">(</span><span class="n">width</span><span class="o">=</span><span class="s1">&#39;500px&#39;</span><span class="p">)</span>
+<span class="n">display</span><span class="p">(</span><span class="n">int_widget</span><span class="p">)</span>
 </pre></div>
 
     </div>
@@ -13177,23 +13179,6 @@ div#notebook {
 
 </div>
 
-</div>
-</div>
-
-  </div>
-
-  
-
-  <div class="
-      cell border-box-sizing code_cell rendered">
-    <div class="input">
-
-<div class="inner_cell">
-    <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span> 
-</pre></div>
-
-    </div>
 </div>
 </div>
 
