--- a/C1G1.html
+++ b/C1G1.html
@@ -13131,7 +13131,7 @@ div#notebook {
 <span class="kn">import</span> <span class="nn">seaborn</span> <span class="k">as</span> <span class="nn">sns</span>
 <span class="kn">import</span> <span class="nn">numpy</span> <span class="k">as</span> <span class="nn">np</span>
 <span class="kn">import</span> <span class="nn">matplotlib.pyplot</span> <span class="k">as</span> <span class="nn">plt</span>
-<span class="kn">from</span> <span class="nn">ipywidgets</span> <span class="kn">import</span> <span class="n">interact</span><span class="p">,</span> <span class="n">interactive</span><span class="p">,</span> <span class="n">fixed</span><span class="p">,</span> <span class="n">interact_manual</span>
+<span class="kn">from</span> <span class="nn">ipywidgets</span> <span class="kn">import</span> <span class="n">interact</span><span class="p">,</span> <span class="n">interactive</span><span class="p">,</span> <span class="n">fixed</span><span class="p">,</span> <span class="n">interact_manual</span><span class="p">,</span> <span class="n">Layout</span>
 <span class="kn">import</span> <span class="nn">ipywidgets</span> <span class="k">as</span> <span class="nn">widgets</span>
 <span class="kn">import</span> <span class="nn">random</span>
 
@@ -13139,9 +13139,9 @@ div#notebook {
 <span class="n">data2</span> <span class="o">=</span> <span class="n">pd</span><span class="o">.</span><span class="n">read_csv</span><span class="p">(</span><span class="s2">&quot;data2.csv&quot;</span><span class="p">)</span>
 <span class="n">heightSim</span> <span class="o">=</span> <span class="n">data2</span><span class="p">[</span><span class="s1">&#39;Height&#39;</span><span class="p">]</span>
 
-<span class="k">def</span> <span class="nf">changeSampleSize</span><span class="p">(</span><span class="n">Sample_Size</span><span class="o">=</span><span class="mi">18</span><span class="p">):</span>
+<span class="k">def</span> <span class="nf">changeSampleSize</span><span class="p">(</span><span class="n">Sample_Size</span><span class="o">=</span><span class="mi">5</span><span class="p">):</span>
   <span class="n">np</span><span class="o">.</span><span class="n">random</span><span class="o">.</span><span class="n">seed</span><span class="p">(</span><span class="mi">4</span><span class="p">)</span>
-  <span class="n">SampledHeight</span><span class="o">=</span><span class="n">random</span><span class="o">.</span><span class="n">choices</span><span class="p">(</span><span class="n">heightSim</span><span class="p">,</span> <span class="n">k</span><span class="o">=</span><span class="n">sample_size</span><span class="p">)</span>
+  <span class="n">SampledHeight</span><span class="o">=</span><span class="n">random</span><span class="o">.</span><span class="n">choices</span><span class="p">(</span><span class="n">heightSim</span><span class="p">,</span> <span class="n">k</span><span class="o">=</span><span class="n">Sample_Size</span><span class="p">)</span>
   <span class="n">meanHgt</span><span class="o">=</span><span class="n">np</span><span class="o">.</span><span class="n">mean</span><span class="p">(</span><span class="n">SampledHeight</span><span class="p">)</span>
 
   <span class="n">sns</span><span class="o">.</span><span class="n">displot</span><span class="p">(</span><span class="n">SampledHeight</span><span class="p">,</span><span class="n">bins</span><span class="o">=</span><span class="mi">10</span><span class="p">,</span> <span class="n">kde</span><span class="o">=</span><span class="kc">False</span><span class="p">,</span> <span class="n">rug</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">height</span><span class="o">=</span><span class="mi">6</span><span class="p">,</span> <span class="n">color</span> <span class="o">=</span> <span class="s2">&quot;mediumpurple&quot;</span><span class="p">);</span>
@@ -13152,7 +13152,7 @@ div#notebook {
   <span class="n">plt</span><span class="o">.</span><span class="n">axvline</span><span class="p">(</span><span class="n">x</span><span class="o">=</span><span class="n">meanHgt</span><span class="p">,</span> <span class="n">color</span><span class="o">=</span><span class="s1">&#39;purple&#39;</span><span class="p">,</span> <span class="n">linestyle</span><span class="o">=</span><span class="s1">&#39;-&#39;</span><span class="p">,</span> <span class="n">linewidth</span> <span class="o">=</span> <span class="mi">3</span><span class="p">,</span> <span class="n">label</span><span class="o">=</span><span class="n">meanHgt</span><span class="p">);</span>
   <span class="n">plt</span><span class="o">.</span><span class="n">legend</span> <span class="p">();</span>
 
-<span class="n">int_widget</span> <span class="o">=</span> <span class="n">interactive</span><span class="p">(</span><span class="n">changeSampleSize</span><span class="p">,</span><span class="n">sample_size</span><span class="o">=</span><span class="p">(</span><span class="mi">2</span><span class="p">,</span><span class="mi">1000</span><span class="p">))</span>
+<span class="n">int_widget</span> <span class="o">=</span> <span class="n">interactive</span><span class="p">(</span><span class="n">changeSampleSize</span><span class="p">,</span><span class="n">Sample_Size</span><span class="o">=</span><span class="p">(</span><span class="mi">2</span><span class="p">,</span><span class="mi">1000</span><span class="p">))</span>
 <span class="n">int_widget</span><span class="o">.</span><span class="n">children</span><span class="p">[</span><span class="mi">0</span><span class="p">]</span><span class="o">.</span><span class="n">layout</span> <span class="o">=</span> <span class="n">Layout</span><span class="p">(</span><span class="n">width</span><span class="o">=</span><span class="s1">&#39;500px&#39;</span><span class="p">)</span>
 <span class="n">display</span><span class="p">(</span><span class="n">int_widget</span><span class="p">)</span>
 </pre></div>
